--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,5 @@ PLACE HERE YOUR OWN SCSS CODES AND IF NEEDED, OVERRIDE THE STYLES FROM THE OTHER
 WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BETTER LIKE THIS.  */
 
 * {
-	font-family: "Lalezar", cursive;
-	font-weight: lighter;
+	font-family: "Noto Sans Arabic", sans-serif;
 }
